# linea

./: README.md
docs/: ios-client-contract.md
ios/: README.md
server/: README.md  pyproject.toml
server/src/linea_server/: app.py  auth.py  calls.py  db.py  hermes_jobs.py  hermes_runner.py  internal_test_page.py  main.py  tool_logs.py  tools.py  webrtc.py  xai_config.py  xai_realtime.py
server/tests/: conftest.py  test_app_startup.py  test_auth.py  test_auth_dependency.py  test_db.py  test_health.py  test_hermes_jobs.py  test_hermes_runner.py  test_idle_timeout.py  test_internal_conversation_test_page.py  test_internal_test_page.py  test_logging_policy.py  test_tool_logs.py  test_tools.py  test_webrtc_offer_contract.py  test_webrtc_service.py  test_xai_config.py  test_xai_realtime.py  test_xai_realtime_client.py  test_xai_tools.py
